# apple_picking_state_machine

./: CMakeLists.txt  README.md  package.xml  run_demo.sh
config/: components_coordination_config.yaml
include/apple_picking_state_machine/: state_machine.hpp
launch/: capstone_demo.launch  depth_processing.launch  unused_test.launch
scratch/: progress_manager.cpp  progress_manager.hpp
src/: main.cpp  pcd_publisher.cpp  state_machine.cpp
